--- a/OrdinalSectionUpdate.Rmd
+++ b/OrdinalSectionUpdate.Rmd
@@ -30,6 +30,7 @@ library(nycgeo)
 library(tidycensus)
 library(extrafont)
 library(extrafontdb)
+library(kableExtra)
 # themes
 theme_set(theme_minimal())
 brown_green <- c("#E9DBC2","#7D9B8A","#4D6F5C","#D29B5B","#744410","#1C432D")
@@ -39,7 +40,9 @@ color_scheme_set(brown_green)
 
 Having realized the shortcomings of the naive Bayes model, we wanted to see if there are any alternatives. We land on the ordinal regression model. 
 
-An ordinal regression model predicts the outcome of an ordinal variable, i.e. a variable whose value exists on an arbitrary scale where only the relative ordering between different values is significant. In this case, our subway desert classification is the ordinal variables with categories ranging from the least covered to the most covered (1 ~ 4)
+An ordinal regression model, or ordered logistic regression model, predicts the outcome of an ordinal variable, which is a variable whose value exists on an arbitrary scale where only the relative ordering between different values is significant. In this case, our subway desert classification is the ordinal variable with categories ranging from the least covered to the most covered (1 ~ 4) by the NYC subway system. 
+
+Here we introduce a latent variable $y^*$, which would be a linear combination of the predictor variables. After going through a variable selection process, we took out variables with a confidence interval consisting model consisting of mean income, percentage below poverty, number of evictions, and number of stores in our compiled data. A mathematical expression of the categorization would be as follows:
 
 $$
 
@@ -52,14 +55,8 @@ Y_i| \zeta_1, \zeta_2,\zeta_3,\beta_1, \beta_2,\beta_3, \beta_4 =
 \end{cases} 
 
 \\
+\text{where }
 y^{*} = \beta_1x_1 + \beta_2x_2 + \beta_3x_3 + \beta_4x_4 + \epsilon \\
-
-$$
-- $\zeta_i$ : is a vector of cut-points for categories. 
-- $y^{*}$ : a linear combination of 6 predictor variables consisting of `mean income`, `below poverty percentage`, `eviction count`, and `store_count`.
-- $\beta_i$ : is the coefficient for the $ith$ predictor variable. 
-
-$$
 \zeta_1 \sim N(m_{\zeta 1}, s_{\zeta 1}^{2}) \\
 \zeta_2 \sim N(m_{\zeta 2}, s_{\zeta 2}^{2}) \\
 \zeta_3 \sim N(m_{\zeta 3}, s_{\zeta 3}^{2}) \\
@@ -68,8 +65,11 @@ $$
 \beta_2 \sim N(m_{\beta 2}, s_{\beta 2}^{2}) \\
 \beta_3 \sim N(m_{\beta 3}, s_{\beta 3}^{2}) \\
 \beta_4 \sim N(m_{\beta 4}, s_{\beta 4}^{2}) \\
+
 $$
-Since we do not have prior information about the data, we will be using the default prior R2 given by the `stan_polr` function. 
+Each $\zeta_i$ is a vector of cut-points for categories, and each $\beta_i$ is the coefficient for the $i^{th}$ predictor variable. 
+
+Since we do not have prior information about the data, we will be using the default prior R2 given by the `stan_polr` function, which is null, or a uniform prior. 
 
 Note:
 - There is no intercept in this model because the data cannot distinguish an intercept from the cut points. 
@@ -102,7 +102,7 @@ data_test <- testing(data_split)
 ```{r}
 model2 <- stan_polr(as.factor(transportation_desert_4num) ~ mean_income + below_poverty_line_perc + store_count, 
                     data =data_train, prior_counts = dirichlet(1),
-                    prior=R2(0.5), iter=500, seed = 86437, refresh=0, prior_PD=FALSE)
+                    prior=NULL, iter=500, seed = 86437, refresh=0, prior_PD=FALSE)
 
 
 tidy(model2, effects = "fixed", conf.int = TRUE, conf.level = 0.8) %>%
@@ -126,10 +126,10 @@ ordinal_accuracy<-function(post_preds,mydata){
     results[j]<-as.numeric(tail(names(sort(table(post_preds[,j]))))[4])
     }
   results<-as.data.frame(results)
-  compare<-cbind(results,mydata$transportation_desert_4num)
-  compare<-compare %>%mutate(results=as.numeric(results))
-  compare<-compare %>% mutate(`mydata$transportation_desert_4num`=as.numeric(`mydata$transportation_desert_4num`))
-  compare<-compare %>%mutate(accuracy=ifelse(as.numeric(results)==as.numeric(`mydata$transportation_desert_4num`),1,0))
+  compare<-cbind(results,mydata$transportation_desert_4num)%>%
+    mutate(results=as.numeric(results)) %>%
+    mutate(`mydata$transportation_desert_4num`=as.numeric(`mydata$transportation_desert_4num`)) %>% 
+    mutate(accuracy=ifelse(as.numeric(results)==as.numeric(`mydata$transportation_desert_4num`),1,0))
   print(sum(compare$accuracy)/length(post_preds))
 }
 ```
@@ -149,6 +149,7 @@ my_prediction2 <- posterior_predict(
 ordinal_accuracy(my_prediction2, data_test)
 ```
 
+The current model gives an accuracy of 0.564, which is pretty decent.
 
 ```{r}
 my_prediction2 <- posterior_predict(
@@ -186,4 +187,7 @@ data_test %>%
           plot.title = element_text(family="DIN Condensed", size =20, hjust=.5, face = "bold")) +
    scale_fill_manual(values=c("#895F32","#E9DBC2","#7D9B8A", "#395645"),
                        guide = guide_legend(title = "Subway Accessibility \nCategory"), na.value="#D6D6D6")
+```
+  Discuss the predictions in more depth. For what categories are the predictions the best? What’s a common misclassification? Why do you think this might be the case?
+  
   
